--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,15 @@
-aiohttp==3.8.1
-aiosignal==1.2.0
-anyio==3.5.0
-asgiref==3.5.0
-async-timeout==4.0.2
-attrs==21.4.0
-autobahn==22.2.2
-Automat==20.2.0
-binance-connector==1.11.0
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.12
-click==8.0.4
-constantly==15.1.0
-cryptography==36.0.2
-dateparser==1.1.1
-fastapi==0.75.0
-frozenlist==1.3.0
-h11==0.13.0
-hyperlink==21.0.0
-idna==3.3
-incremental==21.3.0
-Jinja2==3.1.2
-MarkupSafe==2.1.1
-multidict==6.0.2
-pdpyras==4.5.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-pydantic==1.9.0
-pyOpenSSL==22.0.0
-python-binance==1.0.15
-python-dateutil==2.8.2
-pytz==2021.3
-pytz-deprecation-shim==0.1.0.post0
-regex==2022.3.2
-requests==2.27.1
-service-identity==21.1.0
-six==1.16.0
-sniffio==1.2.0
-starlette==0.17.1
-Twisted==22.2.0
-txaio==22.2.1
-typing-extensions==4.1.1
-tzdata==2022.1
-tzlocal==4.1
-ujson==5.1.0
-urllib3==1.26.9
-uvicorn==0.17.6
-websockets==9.1
-yarl==1.7.2
-zope.interface==5.4.0
+async-generator==1.10
+attrs==23.1.0
+certifi==2022.12.7
+exceptiongroup==1.1.1
+h11==0.14.0
+idna==3.4
+outcome==1.2.0
+PySocks==1.7.1
+selenium==4.9.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+trio==0.22.0
+trio-websocket==0.10.2
+urllib3==1.26.15
+wsproto==1.2.0
